--- a/tienda53/src/main/webapp/index.html
+++ b/tienda53/src/main/webapp/index.html
@@ -28,7 +28,7 @@
 		<div class="container-fluid">
 		<div class="row justify-content-between">
 	    <div class="col-4">
-	      <a class="navbar-brand links" href="index.html"><i class="fas fa-store"></i></i> Tienda Virtual</a>
+	      <a class="navbar-brand links" href="index.html"><i class="fas fa-store"></i></i> Tienda Virtual prueba</a>
 	    </div>
 	    <div class="col-4">
 	    <a class="navbar-brand links" href="login.jsp"><i class="fas fa-sign-in-alt"></i> Iniciar sesión</a>
